# pro-mgr

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  TODO.md  install.sh  pyproject.toml  requirements.txt
docs/specs/: commands.md
src/pro_mgr/: cli.py  config.py  db.py  runner.py  scaffold.py  tui.py  watcher.py
templates/django-app/: README.md  manage.py  pro-mgr.toml  pyproject.toml
templates/django-app/__name__/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
templates/dotfiles/: README.md  dot-man.ini  pro-mgr.toml
templates/flask-api/: README.md  pro-mgr.toml  pyproject.toml
templates/flask-api/__name__/: __init__.py  app.py
templates/flask-api/tests/: __init__.py  test_app.py
templates/node-app/: .gitignore  README.md  package.json  pro-mgr.toml
templates/node-app/src/: index.js
templates/python-cli/: README.md  pro-mgr.toml  pyproject.toml
templates/python-cli/__name__/: __init__.py  main.py
templates/python-cli/tests/: test_main.py
tests/: test_config.py  test_db.py  test_scaffold.py
