[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "{{name}}"
version = "0.1.0"
description = "A Flask API application"
requires-python = ">=3.8"
dependencies = ["flask>=3.0.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "flake8"]

[tool.setuptools.packages.find]
where = ["."]
